--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wt",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "module": "index.ts",
   "type": "module",
   "bin": {
@@ -21,12 +21,17 @@
     "dev": "bun run ./src/index.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/ms": "^2.1.0"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "commander": "^14.0.3"
+    "@inquirer/prompts": "^8.2.0",
+    "chalk": "^5.6.2",
+    "commander": "^14.0.3",
+    "ms": "^2.1.3",
+    "nanoid": "^5.1.6"
   }
 }
