--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,21 +9,8 @@ permissions:
   contents: write
 
 jobs:
-  build:
-    strategy:
-      matrix:
-        include:
-          - target: bun-linux-x64
-            asset: wt-linux
-            os: ubuntu-latest
-          - target: bun-darwin-arm64
-            asset: wt-macos-arm
-            os: macos-14
-          - target: bun-windows-x64
-            asset: wt-windows.exe
-            os: windows-latest
-
-    runs-on: ${{ matrix.os }}
+  publish:
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -32,27 +19,20 @@ jobs:
         with:
           bun-version: latest
 
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          registry-url: "https://registry.npmjs.org"
+
       - run: bun install
 
-      - run: bun build ./src/index.ts --compile --target=${{ matrix.target }} --outfile ./dist/${{ matrix.asset }}
+      - run: bun run build
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.asset }}
-          path: ./dist/${{ matrix.asset }}
+      - run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-          merge-multiple: true
-
-      - name: Create release
+      - name: Create GitHub release
         uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
-          files: artifacts/*
