--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "commander": "^14.0.3",
     "ms": "^2.1.3",
     "nanoid": "^5.1.6",
+    "nanospinner": "^1.2.2",
     "proper-lockfile": "^4.1.2"
   }
 }
